ui/main.css
@viewport {
    width: device-width;
    zoom: 1.0;
}

html {
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    height: 100%;
    font-family: 'Red Hat Text', sans-serif;
    margin: 0;
    padding: 0;
    color: rgb(255, 255, 255);
}

.sidenav {
    height: 100%;
    width: 72px;
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgb(32, 34, 37);
    text-align: center;
    padding-top: 10px;
    float: left;
    z-index: 1;
    overflow-x: visible;
}

.sidenav .server {
    height: 48px;
    width: 48px;
    text-align: center;
    margin: auto;
    background-color: rgb(54, 57, 63);
    border-radius: 100%;
    vertical-align: middle;
    margin-bottom: 10px;
    position: relative;
}

.sidenav .server:hover {
    background-color: rgb(114, 137, 218);
    border-radius: 35%;
    cursor: pointer;
}

.sidenav .server:hover > .selector {
    border-right: 4px solid rgb(255,255,255);
    height: 18px;
    width: 1px;
    position: fixed;
    left: 0;
    border-radius: 20%;
    margin-top: 15px;
}

.sidenav .server.selected {
    background-color: rgb(114, 137, 218);
    border-radius: 35%;
}

.sidenav .server.selected > img {
    border-radius: 35%;
}

.sidenav .server.selected > .selector {
    border-right: 4px solid rgb(255,255,255);
    height: 40px;
    width: 1px;
    position: fixed;
    left: 0;
    border-radius: 20%;
    margin-top: 6px;
}

.sidenav p {
    color: rgb(255, 255, 255);
    padding-top: 33%;
    font-size: 12px;
    font-weight: bolder;
}

.server img {
    height: 48px;
    width: 48px;
    border-radius: 100%;
    pointer-events: none;
}

.sidenav .server:hover > img {
    border-radius: 35%;
}

.sidenav p::selection, .sidenav a::selection, .sidenav::selection, .sidenav div::selection, .sidenav img::selection {
    background: none;
}

.sidenav i {
    color: rgb(255, 255, 255);
    font-size: 25px;
    padding-top: 20%;
}

.sidenav hr {
    width: 50%;
    color: rgb(65, 65, 68);
}

.tooltip {
    visibility: hidden;
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    text-align: center;
    padding: 5px;
    border-radius: 6px;
    position: absolute;
    z-index: 99 !important;
    top: -5px;
    left: 105%; 
    overflow: hidden;
    white-space: nowrap;
    font-size: 12px;
    font-weight: 550;
    transform: translate(5px, 15px);
}

.server:hover .tooltip {
    visibility: visible;
}

.actionbar {
    height: 100%;
    width: 240px;
    background-color: rgb(47, 49, 54);
    position: fixed;
    left: 0;
    top: 0;
    margin-left: 72px;
    z-index: 0;
}

.main {
    height: 100%;
    width: 100%;
    margin-left: 311px;
    position: fixed;
    float: left;
    top: 0;
    background-color: rgb(54, 57, 63);
}

.user {
    width: 240px;
    height: 53px;
    position: fixed;
    bottom: 0;
    background-color: rgb(41, 43, 47);
}

.user .avatar {
    padding-left: 8px;
    padding-right: 4px;
    padding-top: 10px;
    display: inline-block;
    pointer-events: none;
}

.user img {
    width: 32px;
    height: 32px;
    border-radius: 100%;
}

.user p {
    margin: 0;
    color: rgb(255, 255, 255);
}

.user .username {
    display: inline-block;
    transform: translateY(-3px);
}

.user .name {
    font-size: 12px;
    font-weight: bolder;
    text-overflow: ellipsis;
    width: 150px;
    white-space: nowrap;
    overflow: hidden;
}

.user .discriminator {
    font-size: 9px;
    font-weight: lighter;
}

.user .fa-sign-out-alt {
    height: 20px;
    width: 20px;
    font-size: 20px;
    cursor: pointer;
    color: rgb(185, 187, 190);
    position: fixed;
    left: 275px;
    bottom: 16.5px;
}

.user .fa-sign-out-alt:hover {
    color: rgb(125, 127, 131);
}

.user img::selection, .user::selection, .user div::selection{
    background: none;
}

.infobar {
    width: 100%;
    height: 48px;
    position: fixed;
    top: 0;
    background-color: rgb(54, 57, 63);
    box-shadow: 1px 1px 1px rgba(0,0,0,0.4);
}

.infobar .fa-hashtag, .infobar .fa-at {
    height: 23px;
    width: 23px;
    font-size: 23px;
    color: rgb(114, 118, 125);
    display: inline-block;
    margin-left: 20px;
    margin-top: 12.5px;
    margin-right: 4px;
    transform: translateY(-18px);
}

.infobar .chantitle {
    display: inline-block;
    font-weight: 500;
    font-size: 15px;
    transform: translateY(-2px);
    width: calc(100% - 400px);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.actioninfo {
    width: 240px;
    height: 48px;
    position: fixed;
    top: 0;
    background-color: rgb(47, 49, 54);
    box-shadow: -1px 1px 1px rgba(0,0,0,0.4);
}

.actioninfo p {
    font-weight: bold;
    font-size: 12px;
    margin-left: 13px;
    margin-right: 13px;
    margin-top: 18px;
    pointer-events: none;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    width: 200px;
}

.actioninfo p::selection, .actioninfo::selection, .actionbar::selection {
    background: none;
}

.mainbox {
    width: 100%;
    height: 100%;
    margin-top: 49px;
    display: inline-block;
}

.memberbar {
    width: 240px;
    height: 100%;
    background-color: rgb(47, 49, 54);
    display: inline-block;
    position: fixed;
    right: 0;
    overflow-y: scroll;
}

.actionbar .chancontainer {
    margin-top: 48px;
    margin-bottom: 53px;
    position: fixed;
    top: 0;
    height: calc(100% - 111px);
    width: 230px;
    padding-top: 10px;
    padding-left: 10px;
    overflow-y: scroll;
    overflow-x: hidden;
}

.actionbar .chan {
    background-color: rgb(47, 49, 54);
    width: 200px;
    height: 20px;
    margin-top: 4px;
    border-radius: 5px;
    padding: 5px;
    cursor: pointer;
}

.actionbar .chan:hover {
    background-color: rgb(57, 60, 66);
}

.actionbar .dmuser {
    width: 220px;
    height: 40px;
    margin-top: 10px;
    overflow: hidden;
    background-color: rgb(47, 49, 54);
    border-radius: 4px;
    cursor: pointer;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.actionbar .dmuser:hover {
    background-color: rgb(51, 54, 60);
}

.actionbar .dmuser:hover > .dmusername {
    color: rgb(255, 255, 255);
}

.actionbar .dmuser.selected {
    background-color: rgb(51, 54, 60);
}

.actionbar .dmuser.selected > .dmusername {
    color: rgb(255, 255, 255);
}

.actionbar .dmavatar {
    width: 32px;
    height: 32px;
    border-radius: 100%;
    display: inline-block;
    margin-top: 4px;
    margin-right: 7px;
    margin-left: 4px;
    pointer-events: none;
}

.actionbar .dmusername {
    display: inline-block;
    font-size: 15px;
    margin: 0;
    width: 150px;
    padding-bottom: 5px;
    color: rgb(126, 129, 134);
    font-weight: 500;
    pointer-events: none;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.actionbar .dmusername::selection, .actionbar .dmavatar::selection, .actionbar .dmuser::selection {
    background: none;
}

.chan .fa-hashtag {
    width: 15px;
    height: 15px;
    color: rgb(114, 118, 125);
    display: inline-block;
    transform: translateY(-30px);
}

.chan .channame {
    color: rgb(114, 118, 125);
    font-size: 14px;
    font-weight: 500;
    width: 180px;
    display: inline-block;
    transform: translateY(-13px);
    padding-left: 4px;
    pointer-events: none;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.chancontainer .chan.selected {
    background-color: rgb(57, 60, 66);
    cursor: default;
}

.actionbar .chan:hover > .channame {
    color: rgb(218, 218, 218);
}

.chancontainer .chan.selected > .channame {
    color: rgb(255, 255, 255);
}

.chan .channame::selection, .chan .fa-hashtag::selection, .actionbar .chancontainer::selection, .actionbar .chan::selection, .infobar::selection, .infobar .chantitle::selection {
    background: none;
}

.actionbar .chanhead {
    font-weight: 500;
    color: rgb(142, 146, 151);
    font-size: 11px;
    pointer-events: none;
    margin-bottom: 0;
}

.actionbar .chanhead::selection, .actionbar .chantitle:hover, .actionbar .chancontainer::selection {
    background: none;
}

.memberbar .memberdesc {
    font-size: 11px;
    font-weight: 500;
    margin-top: 20px;
    margin-left: 12px;
    margin-bottom: 0;
    color: rgb(126, 129, 134);
}

.memberbar .member {
    width: 220px;
    height: 40px;
    margin-left: 8px;
    margin-top: 10px;
    overflow: hidden;
    background-color: rgb(47, 49, 54);
    border-radius: 4px;
    cursor: pointer;
}

.memberbar .member:hover {
    background-color: rgb(51, 54, 60);
}

.memberbar .member:hover > .membername {
    color: rgb(255, 255, 255);
}

.memberbar .avatar {
    width: 32px;
    height: 32px;
    border-radius: 100%;
    display: inline-block;
    margin-top: 4px;
    margin-right: 7px;
    margin-left: 4px;
    pointer-events: none;
}

.memberbar .membername {
    display: inline-block;
    font-size: 15px;
    margin: 0;
    transform: translateY(-10px);
    color: rgb(126, 129, 134);
    font-weight: 500;
    pointer-events: none;
    width: 170px;
    overflow-x: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.memberbar .memberdesc::selection, .memberbar .membername::selection, .memberbar .avatar::selection, .memberbar .member::selection, .memberbar::selection {
    background: none;
}

.mainbox .messagebox {
    display: inline-block;
    position: fixed;
    left: 312px;
    top: 48px;
    bottom: 0;
    right: 240px;
}

.messagebox .messageinput {
    width: calc(100% - 30px);
    height: 35px;
    border-radius: 4px;
    position: absolute;
    bottom: 20px;
    box-sizing : border-box;
    margin-left: 15px;
    margin-right: 15px;
    border: none;
    padding: 5px;
    padding-left: 10px;
    padding-right: 10px;
    color: rgb(255, 255, 255);
    background-color: rgb(64, 68, 75);
}

.messagebox .inputborder {
    width: calc(100% - 30px);
    position: absolute;
    bottom: 75px;
    height: 0;
    border-bottom: 1px solid rgb(66, 69, 74);
    margin-left: 15px;
}

.messagebox .messageinput::placeholder {
    color: rgb(106, 110, 116);
}

.messagebox .messageinput:focus {
    outline: none;
}

.messagebox .messages {
    height: calc(100% - 75px);
    width: calc(100% - 15px);
    margin-left: 15px;
    display: flex;
    flex-direction: column-reverse;
    overflow-y: scroll;
    overflow-x: scroll;
}

.messages .message {
    border-top: 1px solid rgb(66, 69, 74);
    width: calc(100% - 15px);
    margin-right: 15px;
}

.message .msgavatar {
    border-radius: 100%;
    width: 40px;
    height: 40px;
    margin-top: 30px;
    display: inline-block;
    pointer-events: none;
}

.message .msguser {
    display: inline-block;
    font-weight: 500;
    font-size: 14px;
    white-space: nowrap;
    padding: 0;
    transform: translateY(-22px);
    margin-left: 15px;
    cursor: pointer;
}

.message .msguser:hover {
    text-decoration: underline;
}

.message .msgtime {
    display: inline-block;
    font-weight: 400;
    font-size: 11px;
    white-space: nowrap;
    padding: 0;
    transform: translateY(-22px);
    margin-left: 6px;
    color: rgb(94, 97, 104);
}

.message .msgbody {
    display: inline-block;
    width: calc(100% - 58px);
    margin-left: 58px;
    transform: translateY(-32px);
    font-size: 12px;
    font-weight: 300;
}

.message .msgavatar::selection, .message::selection, .messagebox::selection {
    background: none;
}

.messages .spacer {
    height: 20px;
}

.nowrap {
    white-space: nowrap;
}

